6.3.x/sidebar.md
---
layout: null
---

* [Planning](#planning)
    *   [Architecture](/$version/planning/Architecture.html)
    *   [Getting Started](/$version/planning/Getting-Started.html)
    *   [Security Guide](/$version/planning/Security-Guide.html)
    *   [Upgrade Guide](/$version/planning/Upgrade-Guide.html)
    *   [Release Policy](/cas/developer/Release-Policy.html)
    *   [Release Schedule](https://github.com/apereo/cas/milestones)
    *   [Release Notes](/$version/release_notes/Overview.html)
    *   [Maintenance Policy](/cas/developer/Maintenance-Policy.html)

* [Installation](#casinstallation)
    *   [Requirements](/$version/planning/Installation-Requirements.html)
    *   [WAR Overlays](/$version/installation/WAR-Overlay-Installation.html)
        *   [Initializr](/$version/installation/WAR-Overlay-Initializr.html)
    *   [Command-line Shell](/$version/installation/Configuring-Commandline-Shell.html) 
    *   [Docker Deployment](/$version/installation/Docker-Installation.html)
    *   [Servlet Containers](/$version/installation/Configuring-Servlet-Container.html)
    *   [OS Service](/$version/installation/Configuring-Deployment-System-Service.html)
    *   [Troubleshooting Guide](/$version/installation/Troubleshooting-Guide.html)

* [Configuration](#casconfigmgmt)
    *   [Overview](/$version/configuration/Configuration-Management.html)
    *   [Configuration Server](/$version/configuration/Configuration-Server-Management.html)
    *   [Common Properties](/$version/configuration/Configuration-Properties-Common.html)
    *   [Properties & Settings](/$version/configuration/Configuration-Properties.html)
    *   [Configuration Security](/$version/configuration/Configuration-Properties-Security.html)
    *   [Configuration Metadata](/$version/configuration/Configuration-Metadata-Repository.html)
    *   [Configuration Extensions](/$version/configuration/Configuration-Management-Extensions.html)
    *   [Reloading Changes](/$version/configuration/Configuration-Management-Reload.html)
    *   [Clustered Deployments](/$version/configuration/Configuration-Management-Clustered.html)
    *   [Configuration Discovery](/$version/configuration/Configuration-Discovery.html)
    *   [Configuration Expressions](/$version/configuration/Configuration-Spring-Expressions.html)

* [Authentication](#casauthentication)
    *   [Overview](/$version/installation/Configuring-Authentication-Components.html)
    *   [Methods](#authnmethods)
        *   [LDAP](/$version/installation/LDAP-Authentication.html)
            *   [Password Policy](/$version/installation/Password-Policy-Enforcement.html)
        *   [Database](/$version/installation/Database-Authentication.html)
            *   [Password Policy](/$version/installation/Password-Policy-Enforcement.html)
        *   [JAAS](/$version/installation/JAAS-Authentication.html)
        *   [X.509](/$version/installation/X509-Authentication.html)
        *   [RADIUS](/$version/mfa/RADIUS-Authentication.html)
        *   [SPNEGO](/$version/installation/SPNEGO-Authentication.html)
        *   [Remote Address](/$version/installation/Remote-Address-Authentication.html)
        *   [Trusted](/$version/installation/Trusted-Authentication.html)
        *   [Apache Cassandra](/$version/installation/Cassandra-Authentication.html)
        *   [Apache Fortress](/$version/installation/Configuring-Fortress-Authentication.html)
        *   [Apache Shiro](/$version/installation/Shiro-Authentication.html)
        *   [Apache Syncope](/$version/installation/Syncope-Authentication.html)
        *   [JWT](#jwtauthn)
            *   [Overview](/$version/installation/JWT-Authentication.html)
            *   [JWT Service Tickets](/$version/installation/Configure-ServiceTicket-JWT.html) 
        *   [Rest](/$version/installation/Rest-Authentication.html)
        *   [AWS Cloud Directory](/$version/installation/AWS-CloudDirectory-Authentication.html)
        *   [AWS Cognito](/$version/installation/AWS-Cognito-Authentication.html)
        *   [Couchbase](/$version/installation/Couchbase-Authentication.html)
        *   [Basic](/$version/installation/Basic-Authentication.html)
        *   [Groovy](/$version/installation/Groovy-Authentication.html)
        *   [QR Code](/$version/installation/QRCode-Authentication.html)
        *   [Digest](/$version/installation/Digest-Authentication.html)
        *   [MongoDb](/$version/installation/MongoDb-Authentication.html)
        *   [Redis](/$version/installation/Redis-Authentication.html)
        *   [Azure Active Directory](/$version/installation/Azure-ActiveDirectory-Authentication.html)
        *   [Okta](/$version/installation/Okta-Authentication.html)
        *   [Pac4J](/$version/installation/Pac4j-Authentication.html)
        *   [Permissive](/$version/installation/Permissive-Authentication.html)
        *   [Reject](/$version/installation/Reject-Authentication.html)
        *   [SOAP](/$version/installation/SOAP-Authentication.html)
        *   [Custom](/$version/installation/Configuring-Custom-Authentication.html)
    *   [Delegation](/$version/integration/Delegate-Authentication.html)
        *   [SAML2](/$version/integration/Delegate-Authentication-SAML.html)
        *   [ADFS](/$version/integration/ADFS-Integration.html)
    *   [Throttling](/$version/installation/Configuring-Authentication-Throttling.html)
    *   [GeoLocation Tracking](/$version/installation/GeoTracking-Authentication-Requests.html)
    *   [Proxying](/$version/installation/Configuring-Proxy-Authentication.html)
    *   [Events](/$version/installation/Configuring-Authentication-Events.html)
    *   [Surrogacy & Impersonation](/$version/installation/Surrogate-Authentication.html)
    *   [ClearPass](/$version/integration/ClearPass.html)
    *   [GUA](/$version/installation/GUA-Authentication.html)
    *   [Passwordless](/$version/installation/Passwordless-Authentication.html)
    
* [Attributes](#casattributes)
    *   [Attribute Resolution](/$version/integration/Attribute-Resolution.html)
        *   [Definitions](/$version/integration/Attribute-Definitions.html)
    *   [Attribute Release](/$version/integration/Attribute-Release.html)
        *   [Principal Id](/$version/integration/Attribute-Release-PrincipalId.html)
        *   [Release Policies](/$version/integration/Attribute-Release-Policies.html)
        *   [Value Filters](/$version/integration/Attribute-Value-Release-Policies.html)
        *   [Consent](/$version/integration/Attribute-Release-Consent.html)
        *   [Caching](/$version/integration/Attribute-Release-Caching.html)
        *   [Definitions](/$version/integration/Attribute-Definitions.html)
        
* [Multifactor Authentication](#mfaauthn)
    *   [Overview](/$version/mfa/Configuring-Multifactor-Authentication.html)
    *   [Providers](#mfaproviders)
        *   [Duo Security](/$version/mfa/DuoSecurity-Authentication.html)
        *   [YubiKey](/$version/mfa/YubiKey-Authentication.html)
        *   [RSA/Radius](/$version/mfa/RADIUS-Authentication.html)
        *   [Acceptto](/$version/mfa/Acceptto-Authentication.html)
        *   [Google Authenticator](/$version/mfa/GoogleAuthenticator-Authentication.html)
        *   [Authy](/$version/mfa/AuthyAuthenticator-Authentication.html)
        *   [Simple](/$version/mfa/Simple-Multifactor-Authentication.html)
        *   [FIDO U2F](/$version/mfa/FIDO-U2F-Authentication.html)
        *   [FIDO2 WebAuthn](/$version/mfa/FIDO2-WebAuthn-Authentication.html)
        *   [Swivel Secure](/$version/mfa/SwivelSecure-Authentication.html)
        *   [Custom](/$version/mfa/Custom-MFA-Authentication.html)
    *   [Triggers](/$version/mfa/Configuring-Multifactor-Authentication-Triggers.html)
    *   [Bypass](/$version/mfa/Configuring-Multifactor-Authentication-Bypass.html)
    *   [Trusted Devices](/$version/mfa/Multifactor-TrustedDevice-Authentication.html)
    *   [Adaptive](/$version/mfa/Configuring-Adaptive-Authentication.html)
    
*   [SSO & SLO](#ssoandslo) 
    *   [SSO Session](/$version/installation/Configuring-SSO.html)
    *   [Remember Me](/$version/installation/Configuring-LongTerm-Authentication.html)
    *   [Logout & SLO](/$version/installation/Logout-Single-Signout.html)

*   [Password Management](#pswmgmt)
    *   [Overview](/$version/password_management/Password-Management.html)
    *   [Account Management](#pwmOptions)
        *   [JSON](/$version/password_management/Password-Management-JSON.html)
        *   [LDAP](/$version/password_management/Password-Management-LDAP.html)
        *   [JDBC](/$version/password_management/Password-Management-JDBC.html)
        *   [REST](/$version/password_management/Password-Management-REST.html)
        *   [Custom](/$version/password_management/Password-Management-Custom.html) 

* [Ticketing](#ticketingconfig)
    *   [Overview](/$version/ticketing/Configuring-Ticketing-Components.html)
    *   [JWT Service Tickets](/$version/installation/Configure-ServiceTicket-JWT.html) 
    *   [Expiration Policies](/$version/ticketing/Configuring-Ticket-Expiration-Policy.html)
    *   [Storage](#ticketingstorage)
        *   [Default](/$version/ticketing/Default-Ticket-Registry.html)
        *   [JMS](/$version/ticketing/Messaging-JMS-Ticket-Registry.html)
        *   [Hazelcast](/$version/ticketing/Hazelcast-Ticket-Registry.html)
        *   [Ehcache](/$version/ticketing/Ehcache-Ticket-Registry.html)
        *   [Memcached](/$version/ticketing/Memcached-Ticket-Registry.html)
        *   [JPA](/$version/ticketing/JPA-Ticket-Registry.html)
        *   [Ignite](/$version/ticketing/Ignite-Ticket-Registry.html)
        *   [Couchbase](/$version/ticketing/Couchbase-Ticket-Registry.html)
        *   [CouchDb](/$version/ticketing/CouchDb-Ticket-Registry.html)
        *   [Infinispan](/$version/ticketing/Infinispan-Ticket-Registry.html)
        *   [Redis](/$version/ticketing/Redis-Ticket-Registry.html)
        *   [Cassandra](/$version/ticketing/Cassandra-Ticket-Registry.html)
        *   [MongoDb](/$version/ticketing/MongoDb-Ticket-Registry.html)
        *   [DynamoDb](/$version/ticketing/DynamoDb-Ticket-Registry.html)

* [Services & Applications](#service_management)
    *   [Overview](/$version/services/Service-Management.html)
    *   [Management Web Application](/$version/services/Installing-ServicesMgmt-Webapp.html)
    *   [Access Strategy](/$version/services/Configuring-Service-Access-Strategy.html)
    *   [Proxy Policy](/$version/services/Configuring-Service-Proxy-Policy.html)
    *   [Custom Properties](/$version/services/Configuring-Service-Custom-Properties.html)
    *   [Response Type](/$version/services/Configuring-Service-Response-Type.html)
    *   [SSO Policy](/$version/services/Configuring-Service-SSO-Policy.html)
    *   [Matching Strategy](/$version/services/Configuring-Service-Matching-Strategy.html)
    *   [HTTP Security Headers](/$version/services/Configuring-Service-Http-Security-Headers.html)
    *   [Contacts & Owners](/$version/services/Configuring-Service-Contacts.html)
    *   [Expiration Policy](/$version/services/Configuring-Service-Expiration-Policy.html)
    *   [Authentication Policy](/$version/services/Configuring-Service-AuthN-Policy.html)
    *   [Environments](/$version/services/Configuring-Service-Environments.html)
    *   [Replication](/$version/services/Configuring-Service-Replication.html)
    *   [Storage](#persistencesvcreg)
        *   [InMemory](/$version/services/InMemory-Service-Management.html)
        *   [JSON](/$version/services/JSON-Service-Management.html)
        *   [YAML](/$version/services/YAML-Service-Management.html)
        *   [Git](/$version/services/Git-Service-Management.html)
        *   [MongoDb](/$version/services/MongoDb-Service-Management.html)
        *   [LDAP](/$version/services/LDAP-Service-Management.html)
        *   [JPA](/$version/services/JPA-Service-Management.html)
        *   [Redis](/$version/services/Redis-Service-Management.html)
        *   [DynamoDb](/$version/services/DynamoDb-Service-Management.html)
        *   [Amazon S3](/$version/services/AmazonS3-Service-Management.html)
        *   [Cassandra](/$version/services/Cassandra-Service-Management.html)
        *   [CosmosDb](/$version/services/CosmosDb-Service-Management.html)
        *   [Couchbase](/$version/services/Couchbase-Service-Management.html)
        *   [CouchDb](/$version/services/CouchDb-Service-Management.html)
        *   [REST](/$version/services/REST-Service-Management.html)
        *   [Custom](/$version/services/Custom-Service-Management.html)

* [Logs & Audits](#logs_audits)
    *   [Logging](/$version/logging/Logging.html)
        *   [Cloudwatch](/$version/logging/Logging-Cloudwatch.html)
        *   [Loggly](/$version/logging/Logging-Loggly.html)
        *   [Logstash](/$version/logging/Logging-Logstash.html)
        *   [MDC](/$version/logging/Logging-MDC.html)
        *   [Papertrail](/$version/logging/Logging-Papertrail.html)
        *   [Sentry](/$version/logging/Logging-Sentry.html)
        *   [SysLog](/$version/logging/Logging-SysLog.html)
        *   [Splunk](/$version/logging/Logging-Splunk.html)
        *   [Logback](/$version/logging/Logging-Logback.html)
    *   [Audits](/$version/installation/Audits.html)
    
* [Monitoring & Statistics](#monitoroverview)
    *   [Overview](/$version/monitoring/Monitoring-Statistics.html) 
    *   [Administration Server](/$version/monitoring/Configuring-Monitoring-Administration.html)
    *   [JavaMelody](/$version/monitoring/Configuring-Monitoring-JavaMelody.html)
    *   [Metrics](/$version/monitoring/Configuring-Metrics.html)
    *   [Monitors](/$version/monitoring/Configuring-Monitoring.html)
        
* [User Interface](#user_interface)
    *   [Overview](/$version/ux/User-Interface-Customization.html)
    *   [CSS & JavaScript](/$version/ux/User-Interface-Customization-CSSJS.html)
    *   [Views](/$version/ux/User-Interface-Customization-Views.html)
    *   [Localization](/$version/ux/User-Interface-Customization-Localization.html)
    *   [Dynamic Themes](/$version/ux/User-Interface-Customization-Themes.html)
    *   [Dynamic Decorations](/$version/webflow/Webflow-Customization-Decorators.html)

* [Acceptable Usage Policy](#aup)
    *   [Overview](/$version/webflow/Webflow-Customization-AUP.html)

* [Interrupt Notifications](#interrupt_notifications)
    *   [Overview](/$version/webflow/Webflow-Customization-Interrupt.html)
        
*   [Webflow Management](#webflowmgmt)
    *   [Overview](/$version/webflow/Webflow-Customization.html) 
    *   [Error Handling](/$version/webflow/Webflow-Customization-Exceptions.html)
    *   [Extending Webflow](/$version/webflow/Webflow-Customization-Extensions.html)
    *   [Dynamic Decorations](/$version/webflow/Webflow-Customization-Decorators.html) 
    *   [Session Persistence](/$version/webflow/Webflow-Customization-Sessions.html)

* [High Availability](#highavailability)
    *   [Overview](/$version/high_availability/High-Availability-Guide.html)
    *   [Performance Testing](/$version/high_availability/High-Availability-Performance-Testing.html)
        *   [Locust](/$version/high_availability/Performance-Testing-Locust.html)
        *   [JMeter](/$version/high_availability/Performance-Testing-JMeter.html)
    *   [Service Discovery](/$version/installation/Service-Discovery-Guide.html)
        *  [Eureka Service Discovery](/$version/installation/Service-Discovery-Guide-Eureka.html)
        *  [Consul Service Discovery](/$version/installation/Service-Discovery-Guide-Consul.html)
    
* [Protocols](#protocols)
    *   [Overview](/$version/protocol/Protocol-Overview.html)
    *   [CAS](/$version/protocol/CAS-Protocol.html)
    *   [OpenID](/$version/protocol/OpenID-Protocol.html)
    *   [OAuth2](/$version/protocol/OAuth-Protocol.html)
        *   [User-Managed Access](/$version/protocol/OAuth-UMA-Protocol.html)
    *   [OpenID Connect](/$version/protocol/OIDC-Protocol.html)
    *   [WS-Federation](/$version/protocol/WS-Federation-Protocol.html)
    *   [SAML](#samlprotocol)
        *   [SAML1](/$version/protocol/SAML-Protocol.html)
        *   [SAML2](/$version/installation/Configuring-SAML2-Authentication.html)
            *   [Attribute Release](/$version/installation/Configuring-SAML2-Attribute-Release.html)
            *   [Metadata Management](/$version/installation/Configuring-SAML2-DynamicMetadata.html)
    *   [REST](/$version/protocol/REST-Protocol.html)

* [Notifications](#casnotifications)
    *   [Sending Email](/$version/notifications/Sending-Email-Configuration.html)
    *   [Sending Text Messages](/$version/notifications/SMS-Messaging-Configuration.html)
    *   [Sending Notifications](/$version/notifications/Notifications-Configuration.html)
    
* [Integration](#appintegration)
    *   [SAML2 Service Providers](/$version/integration/Configuring-SAML-SP-Integrations.html)
        *   [Google Apps](/$version/integration/Google-Apps-Integration.html)
    *   [Google reCAPTCHA](/$version/integration/Configuring-Google-reCAPTCHA.html)
    *   [Google Analytics](/$version/integration/Configuring-Google-Analytics.html)
    *   [SCIM Provisioning](/$version/integration/SCIM-Integration.html)
    *   [CAS Clients](/$version/integration/CAS-Clients.html)
    *   [Swagger API](/$version/integration/Swagger-Integration.html)
    *   [JMX](/$version/integration/JMX-Integration.html)
    *   [Shibboleth Identity Provider](/$version/integration/Shibboleth.html)

* [Developer](#developer)
    *   [Javadocs](https://www.javadoc.io/doc/org.apereo.cas)
    *   [Code Conventions](/cas/developer/Code-Conventions.html)
    *   [Release Process](/$version/developer/Release-Process.html)
    *   [Build Process](/$version/developer/Build-Process.html)
    *   [Test Process](/$version/developer/Test-Process.html)

* [Project](#projectpolicy)
    *   [PMC](/cas/developer/Project-Commitee.html)
    *   [Security Vulnerability Response](/cas/developer/Sec-Vuln-Response.html)
    *   [Contributor Guidelines](/cas/developer/Contributor-Guidelines.html)
